Add a non-spotlight fallback, and drop standard formatting

--- a/package.json
+++ b/package.json
@@ -2,16 +2,15 @@
   "name": "osx-find-executable",
   "version": "1.0.0",
   "description": "Find an app's executable by its bundle id",
-  "repository": "juliangruber/osx-find-executable",
+  "repository": "httptoolkit/osx-find-executable",
   "license": "MIT",
   "scripts": {
-    "test": "tap test.js && standard"
+    "test": "tap test.js"
   },
   "dependencies": {
     "plist": "^2.0.1"
   },
   "devDependencies": {
-    "standard": "^8.0.0-beta.5",
     "tap": "^9.0.3"
   }
 }
