Fork lib to @httptoolkit

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "osx-find-executable",
-  "version": "1.0.0",
+  "name": "@httptoolkit/osx-find-executable",
+  "version": "1.1.0",
   "description": "Find an app's executable by its bundle id",
   "repository": "httptoolkit/osx-find-executable",
   "license": "MIT",
