Fix package.json 'type' field

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Find an app's executable by its bundle id",
   "repository": "httptoolkit/osx-find-executable",
   "main": "./index.js",
-  "type": "./index.d.ts",
+  "types": "./index.d.ts",
   "license": "MIT",
   "scripts": {
     "test": "tap test.js"
