--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "tap test.js"
   },
   "dependencies": {
+    "bplist-parser": "^0.3.2",
+    "istextorbinary": "^6.0.0",
     "plist": "^3.0.2"
   },
   "devDependencies": {
